--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,10 +12,57 @@ header {
     border-color: rgb(5, 73, 36);
     border-style: solid;
     border-width: 4px;
-
 }
 
-div {
+/* The sidebar menu */
+.sidenav {
+    height: 100%; /* Full-height: remove this if you want "auto" height */
+    width: 160px; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: rgb(5, 73, 36); 
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 20px;
+  }
+  
+  /* The navigation menu links */
+  .sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+  }
+  
+  /* When you mouse over the navigation links, change their color */
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  /* Style page content */
+  .main {
+    margin-left: 160px; /* Same as the width of the sidebar */
+    padding: 0px 10px;
+  }
+  
+  /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
+
+  .about {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    margin-left: 160px;
+  }
+
+/*div {
     border: 4px solid rgb(5, 73, 36);
     padding: 10px;
     margin-bottom: 20px;
@@ -35,7 +82,7 @@ test {
     float: left;
     font-family: 'Open Sans Condensed', sans-serif;
 
-}
+}*/
 
 /*#box {
     background-color: black;
@@ -79,3 +126,56 @@ image {
 	clear: both;
     }
     
+/* 
+font-family: 'Open Sans Condensed', sans-serif;
+font-family: 'Cinzel', serif;
+font-family: 'Roboto', sans-serif;
+font-family: 'Oswald', sans-serif;
+font-family: 'Raleway', sans-serif;
+*/
+
+/*
+*, *::after, *::before {
+  box-sizing: border-box;
+}
+
+.container {
+  margin: 0 auto;
+  margin-top: 50px;
+  width: 1000px;
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.25em;
+}
+
+header {
+  background-color: #1D88E5;
+  height: 100px;
+  padding: 10px;
+  border: 1px solid white;
+}
+
+aside {
+  background-color: #1D88E5;
+  width: 300px;
+  height: 400px;
+  padding: 10px;
+  border: 1px solid white;
+}
+
+main {
+  background-color: #1D88E5;
+  width: 700px;
+  height: 400px;
+  padding: 10px;
+  border: 1px solid white;
+}
+
+footer {
+  background-color: #1D88E5;
+  width: 1000px;
+  height: 100px;
+  padding: 10px;
+  border: 1px solid white;
+}
+*/
