--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,206 +1,75 @@
 * {
-    text-align: center;
-    list-style-position: inside;
-}
-
-header {
-    font-family: 'Open Sans Condensed', sans-serif;
-    padding: 5px;
-    margin-bottom: 10px;
-    color: #333;
-    background: #ffffff;
-    border-color: rgb(5, 73, 36);
-    border-style: solid;
-    border-width: 4px;
-}
-
-/* The sidebar menu */
-.sidenav {
-    height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 160px; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
-    left: 0;
-    background-color: rgb(5, 73, 36); 
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px;
-  }
-  
-  /* The navigation menu links */
-  .sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-  }
-  
-  /* When you mouse over the navigation links, change their color */
-  .sidenav a:hover {
-    color: #f1f1f1;
-  }
-  
-  /* Style page content */
-  .main {
-    margin-left: 160px; /* Same as the width of the sidebar */
-    padding: 0px 10px;
-  }
-  
-  /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
-
-  .clearfix::after {
-	content:"body";
-	display: block;
-	clear: both;
-    }
-    
-  .about {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    margin-left: 160px;
-  }
-
-/*div {
-    border: 4px solid rgb(5, 73, 36);
-    padding: 10px;
-    margin-bottom: 20px;
-    color: #333;
-    font-family: 'Open Sans Condensed', sans-serif;
-}
-
-test {
-    border: 4px solid rgb(5, 73, 36);
-    padding: 20px;
-    border-width: 4px;
-    margin-bottom: 10px;
-    height: 600px;
-    width: 400px;
-    position: fixed;
-    color: #333;
-    float: left;
-    font-family: 'Open Sans Condensed', sans-serif;
-
-}*/
-
-/*#box {
-    background-color: black;
-    color: white;
-    padding: 20%;
-    border-style: solid;
-    border-width: 30%;
-    border-color: grey;
-    float: left;
-    margin: 0 auto;
-    margin-top: 50px;
-    width: 850px;
-    font-size: 1.25em;
-    }
-*/
-/* body {
-    font-size: 17px;
-    line-height: 1.47059;
-    font-weight: 400;
-    letter-spacing: -.022em;
-    font-family: 'Open Sans Condensed', sans-serif;
-    background-color: #ffffff;
-    color: #777777
-    text-align: center;
-}
-*/
-
-image {
-    float: left;
-}
-
-#left {
-    float:left;
-}
-#right {
-    float:right;
-}
-
-footer {
-    display: block;
-  }
-    
-/* 
-font-family: 'Open Sans Condensed', sans-serif;
-font-family: 'Cinzel', serif;
-font-family: 'Roboto', sans-serif;
-font-family: 'Oswald', sans-serif;
-font-family: 'Raleway', sans-serif;
-*/
-
-/*
-*, *::after, *::before {
-  box-sizing: border-box;
+  font-family: 'Cinzel', serif;
+  text-decoration: none;
 }
 
 .container {
+  width:80%;
   margin: 0 auto;
-  margin-top: 50px;
-  width: 1000px;
-  color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1.25em;
 }
 
 header {
-  background-color: #1D88E5;
-  height: 100px;
-  padding: 10px;
-  border: 1px solid white;
+  font-family: 'Cinzel', serif;
+  margin-bottom: 10px;
+  color: black;
+  background: rgb(190,83,11)
 }
 
-aside {
-  background-color: #1D88E5;
-  width: 300px;
-  height: 400px;
-  padding: 10px;
-  border: 1px solid white;
+h1 {
+  float: left;
+  padding: 10px 0;
+
 }
 
-main {
-  background-color: #1D88E5;
-  width: 700px;
-  height: 400px;
-  padding: 10px;
-  border: 1px solid white;
+header::after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
-footer {
-  background-color: #1D88E5;
-  width: 1000px;
-  height: 100px;
-  padding: 10px;
-  border: 1px solid white;
-}
-*/
-/*
-Pseudo Classes!
-a {
-    font-size: 18px;
+nav {
+  float: right;
 }
 
-Look into so many more ways pseudo classes can enhance the user interface.
-a:hover {
-    background-color: pink;
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
-a:focus {
-    background-color: red;
+
+nav li {
+  display: inline-block;
+  margin-left: 70px;
+  padding-top: 23px;
 }
-a:active {
-    background-color: black;
+
+nav a {
+  color: #444;
+  text-decoration: none;
 }
-a:visited {
-    background-color: purple;
+
+body {
+  background-image: url(../images/jtflowers.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  text-align: center;
+  list-style-position: inside;
+  font-family: 'Cinzel', serif;
+  font-weight: bold;
 }
-*/
+
+#image {
+  border-style: solid;
+  border-width: 3px;
+  border-color: #333;
+  float: left;
+  margin-right: 10px;
+}
+
+.footer {
+  text-align: center;
+  margin-bottom: 10px;
+  color: black;
+  background: rgb(190,83,11)
+}
