The last push messed up my CSS and didn't pull all of the elements. Attempting again.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,3 +136,5 @@ footer li a:hover{
   color: rgba(255,255,255,.5);
   transition: all ease-in-out 250ms;
 }
+
+/* The last push messed up my format for some reason, so pushing again*/
