--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,4 +137,7 @@ footer li a:hover{
   transition: all ease-in-out 250ms;
 }
 
-/* The last push messed up my format for some reason, so pushing again*/
+form {
+  text-align: center;
+}
+
