--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,6 @@ body {
   margin-left: 375px;
   margin-bottom: 10px;
   margin-right: 200px;
-  
 }
 
 h2 {
@@ -105,8 +104,6 @@ nav a:hover::before {
   width: 100%;
 }
 
-
-
 #image {
   border-style: solid;
   border-width: 3px;
@@ -144,7 +141,7 @@ form {
 .box1 {
   position: relative;
   max-width: 600px;
-  height: 750px;
+  height: 1100px;
   padding: 50px;
   background: rgba(255,255,255,.2);
   box-shadow: 0 5px 15px rgba(0,0,0,.5);
@@ -154,24 +151,188 @@ form {
   margin-right: 200px;
 }
 
+
 .image {
   border-style: solid;
   border-width: 3px;
   border-color: #333;
   margin-right: 5px;
   margin-top: 10px;
-  margin-bottom: 10px;
   margin-left: 10px;
 }
 
+
 .port1 {
-  height: 200px;
-  width: 200px;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #333;
   float: left;
+  margin-right: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
+.port2 {
+  border-style: solid;
+  border-width: 3px;
+  border-color: #333;
+  float: right;
+  margin-right: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.port3 {
+  border-style: solid;
+  border-width: 3px;
+  border-color: #333;
+  float: left;
+  margin-right: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.port4 {
+  border-style: solid;
+  border-width: 3px;
+  border-color: #333;
+  float: right;
+  margin-right: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.port5 {
+  border-style: solid;
+  border-width: 3px;
+  border-color: #333;
+  float: left;
+  margin-right: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+/*
 .hangman {
   position: relative;
   bottom: 8px;
   left: 16px;
+}
+
+.hangman {
+  padding: 10px 10px;
+  border-width: 2px;
+  border-style: solid;
+  border-color: black;
+}
+
+.rpg {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.trivia {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.rut {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.rock {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+*/
+
+.box2 {
+  position: relative;
+  max-width: 600px;
+  height: 385px;
+  padding: 50px;
+  background: rgba(255,255,255,.2);
+  box-shadow: 0 5px 15px rgba(0,0,0,.5);
+  margin-top: 10px;
+  margin-left: 375px;
+  margin-bottom: 10px;
+  margin-right: 200px;
+}
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
+}
+
+/* Style the label to display next to the inputs */
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+/* Style the submit button */
+input[type=submit] {
+  color: black;
+  background: rgba(190,83,11,.5);
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+/* Style the container 
+.box {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+*/
+
+/* Floating column for labels: 25% width */
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+/* Floating column for inputs: 75% width */
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
 }
