--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,11 @@ body {
   margin-left: 375px;
   margin-bottom: 10px;
   margin-right: 200px;
+
+  margin: auto;
+  width: 50%;
+  align-self: center;
+  align-self: stretch;
 }
 
 h2 {
@@ -149,6 +154,10 @@ form {
   margin-left: 375px;
   margin-bottom: 10px;
   margin-right: 200px;
+  margin: auto;
+  width: 50%;
+  align-self: center;
+  align-self: stretch;
 }
 
 
@@ -273,6 +282,10 @@ form {
   margin-left: 375px;
   margin-bottom: 10px;
   margin-right: 200px;
+  margin: auto;
+  width: 50%;
+  align-self: center;
+  align-self: stretch;
 }
 
 input[type=text], select, textarea {
@@ -334,5 +347,27 @@ input[type=submit] {
   .col-25, .col-75, input[type=submit] {
     width: 100%;
     margin-top: 0;
+    position: auto;
+  }
+}
+
+/* For desktop: TEST */
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
   }
 }
