--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,9 +19,13 @@ header {
 
 body {
   background-image: url(../images/jtflowers.jpg);
-  background-size: cover;
-  background-position: center;
+  background-size: cover, auto, auto;
+  background-position: auto;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   text-align: center;
   list-style-position: inside;
   font-family: 'Cinzel', serif;
@@ -34,15 +38,26 @@ body {
   padding: 50px;
   background: rgba(255,255,255,.2);
   box-shadow: 0 5px 15px rgba(0,0,0,.5);
-  margin-top: 10px;
+  /* margin-top: 10px;
   margin-left: 375px;
   margin-bottom: 10px;
-  margin-right: 200px;
+  margin-right: 200px; */
 
   margin: auto;
-  width: 50%;
+  /* width: 50%; */
   align-self: center;
   align-self: stretch;
+}
+
+.button {
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+}
+
+.button:hover {
+  background-color: rgba(190,83,11,.5);
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  /* color: white; */
 }
 
 h2 {
@@ -122,6 +137,7 @@ nav a:hover::before {
   margin-bottom: 10px;
   color: black;
   background: rgba(190,83,11,.5);
+  text-decoration: none;
 }
 
 footer ul {
@@ -172,9 +188,9 @@ form {
 
 
 .port1 {
-  border-style: solid;
+  /*border-style: solid;
   border-width: 3px;
-  border-color: #333;
+  border-color: #333;*/
   float: left;
   margin-right: 10px;
   padding-left: 20px;
@@ -185,9 +201,9 @@ form {
 }
 
 .port2 {
-  border-style: solid;
+  /*border-style: solid;
   border-width: 3px;
-  border-color: #333;
+  border-color: #333;*/
   float: right;
   margin-right: 10px;
   padding-left: 20px;
@@ -198,9 +214,9 @@ form {
 }
 
 .port3 {
-  border-style: solid;
+  /*border-style: solid;
   border-width: 3px;
-  border-color: #333;
+  border-color: #333;*/
   float: left;
   margin-right: 10px;
   padding-left: 20px;
@@ -211,9 +227,9 @@ form {
 }
 
 .port4 {
-  border-style: solid;
+  /*border-style: solid;
   border-width: 3px;
-  border-color: #333;
+  border-color: #333;*/
   float: right;
   margin-right: 10px;
   padding-left: 20px;
@@ -224,9 +240,9 @@ form {
 }
 
 .port5 {
-  border-style: solid;
+  /*border-style: solid;
   border-width: 3px;
-  border-color: #333;
+  border-color: #333;*/
   float: left;
   margin-right: 10px;
   padding-left: 20px;
